# HDF5Viewer

./: .gitignore  package-lock.json  package.json
app/: DynamicDF.tsx  DynamicDF2.tsx  FileInput.tsx  FilePath.tsx  HDF5Contents.tsx  PropertySideBar.tsx  ReadDF.tsx  SampleDF.tsx  Sidebar.tsx  SidebarFromHdf5.tsx  globals.css  greet.tsx  page.tsx  types.ts
app/styles/: contents.module.css  fileinput.module.css  sidebar.module.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: arrow_dataframe.rs  hdf5_attrs.rs  hdf5_keys.rs  main.rs  main.rs-BK  main.rs-BK2
test_data/: create_test_data.py  small_data.h5
